addons/openerp/static/css/screen.css
/* ... */
table.partners-a .employee input {
    width: 12px;
    height: 12px;
    vertical-align: middle;
}

table.partners-a .remove {
    width: 20px;
}

table.partners-a .total {
    padding-left: 5px;
}

table.sales-a td,table.sales-a th {
    width: 1%;
    text-align: right;
}

table.sales-a td {
    color: #7e7979;
}

table.sales-a .description {
    width: auto;
    padding-left: 0;
    border-left: none;
    text-align: left;
}

table.sales-a td.description {
    color: #111;
}

table.sales-a .uom {
    text-align: center;
}

table.sales-a .remove {
    width: 20px;
    padding-right: 0;
    border-right: none;
    text-align: left;
}

/* lists */
ul.inline-a {
    list-style: none;
    margin: 0 0 10px;
    padding: 0;
}

ul.inline-a li {
    display: inline;
    padding-right: 20px;
    color: #bab8b8;
    font-size: 0.9em;
    font-weight: bold;
    text-transform: uppercase;
}

ul.inline-a li strong {
    padding-right: 5px;
    color: #3a3a3a;
}

ul.inline-b {
    overflow: hidden;
    list-style: none;
    width: 100%;
    padding: 0 0 0 5px;
}

ul.inline-b li {
    float: left;
    padding-right: 5px;
}

ul.people-a {
    list-style: none;
    margin: 0 0 10px;
    padding: 0;
}

ul.people-a li {
    margin: 0 0 10px;
    color: #5a5a5a;
    font-size: 1.2em;
    line-height: 1;
}

ul.people-a li input {
    width: 12px;
    height: 12px;
    margin: 0 3px 0 0;
    padding: 0;
    vertical-align: middle;
}

ul.people-a li a {
    color: #5a5a5a;
}

ul.people-a li a:hover,ul.people-a li a:focus,ul.people-a li a:active {
    color: #1f1f1f;
}

ul.people-a li .dot {
    padding-left: 12px;
    background: url(../images/dots-a.png) 0 3px no-repeat;
}

ul.people-a li .red {
    background-position: 0 3px;
}

ul.people-a li .black {
    background-position: 0 -47px;
}

ul.people-a li .green {
    background-position: 0 -97px;
}

ul.people-a li .blue {
    background-position: 0 -147px;
}

ul.people-a li .orange {
    background-position: 0 -197px;
}

ul.people-a li .violet {
    background-position: 0 -247px;
}

ul.people-a li .gray {
    background-position: 0 -297px;
}

ul.sections-a {
    overflow: hidden;
    list-style: none;
    margin: 0 -7px;
    padding: 0;
}

* html ul.sections-a {
    overflow: visible;
    height: 1%;
}

ul.sections-a li {
    float: left;
    width: 33%;
    font-weight: bold;
    text-transform: uppercase;
}

ul.sections-a li span.wrap {
    display: block;
    padding: 0 7px 10px;
}

ul.sections-a li span.wrap a {
    display: block;
    position: relative;
    height: 140px;
    border-radius: 7px;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    background: #fff;
    background-position: 50% -10px;
    background-repeat: no-repeat;
    box-shadow: 0 1px 1px #bbb;
    -moz-box-shadow: 0 1px 1px #bbb;
    -webkit-box-shadow: 0 1px 1px #bbb;
}

* html ul.sections-a li span.wrap a,
*:first-child+html ul.sections-a li span.wrap a,
.opera ul.sections-a li span.wrap a {
    border: solid #dedcdc;
    border-width: 0 1px 1px;
    border-bottom-color: #bcbbbb;
}

ul.sections-a li span.wrap a:hover,ul.sections-a li span.wrap a:focus,ul.sections-a li span.wrap a:active
    {
    background-position: 50% -260px;
}

ul.sections-a li.sales span.wrap a {
    background-image: url(../images/sections-a-i-money.png);
}

ul.sections-a li.project span.wrap a {
    background-image: url(../images/sections-a-i-flag.png);
}

ul.sections-a li.warehouse span.wrap a {
    background-image: url(../images/sections-a-i-box.png);
}

ul.sections-a li.knowledge span.wrap a {
    background-image: url(../images/sections-a-i-books.png);
}

ul.sections-a li.manufacturing span.wrap a {
    background-image: url(../images/sections-a-i-measure.png);
}

ul.sections-a li.accounting span.wrap a {
    background-image: url(../images/sections-a-i-wallet.png);
}

ul.sections-a li.point-of-sale span.wrap a {
    background-image: url(../images/sections-a-i-tag.png);
}

ul.sections-a li.human-resources span.wrap a {
    background-image: url(../images/sections-a-i-person.png);
}

ul.sections-a li.purchases span.wrap a {
    background-image: url(../images/sections-a-i-cart.png);
}

ul.sections-a li.reporting span.wrap a {
    background-image: url(../images/sections-a-i-charts.png);
}

ul.sections-a li.administration span.wrap a {
    background-image: url(../images/sections-a-i-briefcase.png);
}

ul.sections-a li.tools span.wrap a {
    background-image: url(../images/sections-a-i-tools.png);
}

ul.sections-a li span.wrap a span {
    position: absolute;
    left: -5px;
    top: 100px;
    width: 100%;
    padding-left: 22px;
    background: url(../images/section-a-stripe-left.png) -10001px -10001px no-repeat;
}

ul.sections-a li span.wrap a span strong {
    display: block;
    height: 26px;
    margin-right: 34px;
    padding: 5px 0 0 0;
    background: url(../images/section-a-stripe-right.png) -10001px -10001px
        no-repeat;
    line-height: 26px;
    text-align: center;
}

ul.sections-a li span.wrap a:hover span,ul.sections-a li span.wrap a:focus span,ul.sections-a li span.wrap a:active span,ul.sections-a li span.wrap a.active span
    {
    background-position: 0 0;
}

ul.sections-a li span.wrap a:hover span strong,ul.sections-a li span.wrap a:focus span strong,ul.sections-a li span.wrap a:active span strong,ul.sections-a li span.wrap a.active span strong
    {
    background-position: 100% 5px;
}

.toggle-menu {
    cursor: pointer;
    background: #CECBCB url(../images/arrow_left.png) no-repeat scroll 50% 50%;
    min-height: 100%;
    min-width: 11px;
    width: 11px;
    padding: 0;
    /* hack to fix weird space under bar */
    border-bottom: 1px solid #CECBCB;
}

.closed .toggle-menu {
    background-image: url(../images/arrow_right.png);
}

.closed #primary {
    margin-left: 21px;
}

.closed #secondary {
    display: none;
}
/* ... */

